--- a/HTML/club.html
+++ b/HTML/club.html
@@ -15,13 +15,13 @@
                 <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="">
             </a>
             <div id="desktop_menu">
-                <button class="desktop_show orange_btn" id="boton_miembro">
+                <a class="link_button desktop_show orange_btn" id="boton_miembro">
                     ¡Hazte Miembro!
-                </button>
-                <button class="desktop_show" id="boton_identificate">
+                </a>
+                <a class="link_button desktop_show" id="boton_identificate">
                     <img src="/public/assets/icons/Customer.svg" alt="">
                     Identifícate
-                </button>
+                </a>
                 <a href="#">
                     <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
                 </a>
