--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,13 +15,13 @@
                 <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="">
             </a>
             <div id="desktop_menu">
-                <button class="desktop_show orange_btn" id="boton_miembro">
+                <a class="link_button desktop_show orange_btn" id="boton_miembro">
                     ¡Hazte Miembro!
-                </button>
-                <button class="desktop_show" id="boton_identificate">
+                </a>
+                <a class="link_button desktop_show" id="boton_identificate">
                     <img src="/public/assets/icons/Customer.svg" alt="">
                     Identifícate
-                </button>
+                </a>
                 <a href="#">
                     <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
                 </a>
@@ -30,7 +30,7 @@
                 <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="">
             </a>
             <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="">
-            <input class="desktop_hide" type="checkbox" name="" id="menu_mobile">
+            <input class="desktop_hide" type="checkbox" name="menu_mobile" id="menu_mobile">
             <div class="nav_mobile">
                 <div class="close">X
                 </div>
@@ -66,8 +66,8 @@
     <main id="home">
         <section id="home_socios">
             <div id="socios_btn" class="desktop_hide dos_botones">
-                <button>Inicia Sesión</button>
-                <button>Hazte Miembro</button>
+                <a class="link_button">Inicia Sesión</a>
+                <a class="link_button">Hazte Miembro</a>
             </div>
             <h3 class="desktop_hide">Ventajas de ser miembro</h3>
             <p class="desktop_show">¡Bienvenidos a EivissaPadel! Si aún no eres miembro de nuestro club, descubre
@@ -185,20 +185,20 @@
             </div>
         </section>
         <div id="reserva_clases" class="dos_botones">
-            <button>Reserva Pista</button>
-            <button>Clases</button>
+            <a class="link_button">Reserva Pista</a>
+            <a class="link_button">Clases</a>
         </div>
         <section id="home_club">
             <h2>El Club</h2>
             <div id="botones_dedo">
                 <div class="imagen_club desktop_show">
                 </div>
-                <button>
-                    La asociación<img src="/public/assets/icons/HandCursor.svg" alt="">
-                </button>
-                <button>
-                    Compromiso <br>medioambiental<img src="/public/assets/icons/HandCursor.svg" alt="">
-                </button>
+                <a class="link_button">
+                    <p>La asociación</p><img src="/public/assets/icons/HandCursor.svg" alt="">
+                </a>
+                <a class="link_button">
+                    <p> Compromiso <br>medioambiental</p><img src="/public/assets/icons/HandCursor.svg" alt="">
+                </a>
             </div>
         </section>
         <section id="home_blog">
@@ -228,8 +228,8 @@
                 </div>
             </div>
         </section>
-        <div class="contactanos-btn">
-            <button class="orange_btn">Contáctanos</button>
+        <div class="orange_100_btn">
+            <a class="link_button orange_btn">Contáctanos</a>
         </div>
     </main>
     <footer>
