home y tienda al 80%

--- a/HTML/club.html
+++ b/HTML/club.html
@@ -22,7 +22,7 @@
                     <img src="/public/assets/icons/Customer.svg" alt="">
                     Identifícate
                 </a>
-                <a href="#">
+                <a href="#" class="carrito">
                     <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
                 </a>
             </div>
@@ -30,7 +30,7 @@
                 <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="">
             </a>
             <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="">
-            <input class="desktop_hide" type="checkbox" name="" id="menu_mobile">
+            <input class="desktop_hide" type="checkbox" name="menu_mobile" id="menu_mobile">
             <div class="nav_mobile">
                 <div class="close">X
                 </div>
