avanzando en socios

--- a/HTML/club.html
+++ b/HTML/club.html
@@ -63,7 +63,9 @@
             </nav>
         </div>
     </header>
-    <main id="club"></main>
+    <main id="club">
+        
+    </main>
     <footer>
         <div class="footer_container">
             <div id="links">
