--- a/HTML/index.html
+++ b/HTML/index.html
@@ -66,8 +66,8 @@
     <main id="home">
         <section id="home_socios">
             <div id="socios_btn" class="desktop_hide dos_botones">
-                <a class="link_button">Inicia Sesión</a>
-                <a href="/HTML/socios.html" class="link_button">Hazte Miembro</a>
+                <a class="link_button blue_btn">Inicia Sesión</a>
+                <a href="/HTML/socios.html" class="link_button blue_btn">Hazte Miembro</a>
             </div>
             <h3 class="desktop_hide">Ventajas de ser miembro</h3>
             <p class="desktop_show">¡Bienvenidos a EivissaPadel! Si aún no eres miembro de nuestro club, descubre
@@ -136,7 +136,7 @@
                 </a>
             </div>
         </section>
-        <section id="home_tienda">
+        <section id="home_tienda" class="cuadro_verde">
             <h2>La Tienda</h2>
             <p>En nuestra tienda encontrarás todos los productos vendidos por los socios en su mejor calidad.</p>
             <h3 class="desktop_show">Últimos productos a la venta</h3>
