--- a/HTML/socios.html
+++ b/HTML/socios.html
@@ -65,8 +65,8 @@
     </header>
     <main id="socios">
         <section id="ventajas">
-            <h1>Bienvenido a tu club</h1>
-            <div>
+            <h1>¡BIENVENIDO A TU CLUB!</h1>
+            <section class="ventajas_socio cuadro_verde">
                 <h2>Ventajas de ser socio</h2>
                 <p>
                     Como Socio del club deportivo EivissaPadel disfrutarás de una serie de ventajas exclusivas de
@@ -96,69 +96,77 @@
                     de
                     un estilo de vida activo.
                 </p>
-            </div>
-            <button>Quiero saber más sobre el club</button>
+            </section>
+            <a class="blue_btn link_button">Quiero saber más sobre el club</a>
         </section>
-        <section id="inscripción">
+        <section id="inscripcion">
             <h2>Inscripción al club</h2>
             <p>
                 Para formalizar la inscripción al club, necesitamos algunos datos tuyos, que te permitirán iniciar
                 sesión como miembro de pleno derecho así como adaptar tu participación en el club en la medida que lo
                 desees, ¡bienvenido!
             </p>
-            <form id="datos_personales" action="">
-                <h3>Datos personales</h3>
-                <label for="">Nombre y Apellidos</label>
-                <input type="text" name="" id="">
-                <label for="">Dirección Postal</label>
-                <input type="text" name="" id="">
-                <label for="">Fecha de Nacimiento</label>
-                <input type="date" name="" id="">
-            </form>
-            <form action="" id="disponibilidad">
-                <h3>Disponibilidad</h3>
-                <p>Dinos cuándo estás disponible para participar en el club. Es una cumplimentación orientativa,
-                    hablaremos contigo para cerrar los detalles:</p>
-                <input type="checkbox" value="">
-                <p>1 vez al día</p>
-                <input type="checkbox" value="">
-                <p>1 vez a la semana</p>
-                <input type="checkbox" value="">
-                <p>1 vez al mes</p>
-                <input type="checkbox" value="">
-                <p>Otros (escribir en el recuadro):</p>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
-            </form>
-            <form action="" id="datos_de_contacto">
-                <h3>Datos de Contacto</h3>
-                <label for="">Teléfono</label>
-                <input type="text" name="" id="">
-                <label for="">Correo Electrónico</label>
-                <input type="text" name="" id="">
-                <input type="checkbox" name="" id="">
-                <p>Prefiero comunicarme principalmente por correo</p>
-                <input type="checkbox" name="" id="">
-                <p>Prefiero comunicarme principalmente por teléfono</p>
-            </form>
-            <form action="" id="contribucion">
+            <div class="desktop_3_form">
+                <form action="#" id="datos_personales">
+                    <h3>Datos personales</h3>
+                    <label for="name">Nombre y Apellidos</label>
+                    <input type="text" name="name" id="name">
+                    <label for="postal">Dirección Postal</label>
+                    <input type="text" name="postal" id="postal">
+                    <label for="birth_date">Fecha de Nacimiento</label>
+                    <input type="date" name="birth_date" id="birth_date">
+                </form>
+                <form action="#" id="disponibilidad" class="cuadro_verde">
+                    <h3>Disponibilidad</h3>
+                    <p>Dinos cuándo estás disponible para participar en el club. Es una cumplimentación orientativa,
+                        hablaremos contigo para cerrar los detalles:</p>
+                    <div><input type="checkbox" value="">
+                        <p>1 vez al día</p>
+                    </div>
+                    <div><input type="checkbox" value="">
+                        <p>1 vez a la semana</p>
+                    </div>
+                    <div><input type="checkbox" value="">
+                        <p>1 vez al mes</p>
+                    </div>
+                    <div><input type="checkbox" value="">
+                        <p>Otros (escribir en el recuadro):</p>
+                    </div>
+                    <textarea name="otros" id="otros" cols="30" rows="10"></textarea>
+                </form>
+                <form action="#" id="datos_de_contacto">
+                    <h3>Datos de Contacto</h3>
+                    <label for="phone">Teléfono</label>
+                    <input type="text" name="phone" id="phone">
+                    <label for="email">Correo Electrónico</label>
+                    <input type="text" name="email" id="email">
+                    <div><input type="checkbox" name="check_email" id="check_email">
+                        <p>Prefiero comunicarme principalmente por correo</p>
+                    </div>
+                    <div> <input type="checkbox" name="check_phone" id="check_phone">
+                        <p>Prefiero comunicarme principalmente por teléfono</p>
+                    </div>
+                </form>
+            </div>
+            <form action="#" id="contribucion">
                 <h3>Contribución</h3>
                 <p>Con tan solo 10 € al mes nuestro club puede seguir evolucionando y autoabasteciéndose para la gestión
                     básica, pero con cantidades superiores podremos organizar más eventos y conseguir un alcance más
                     importante y por tanto mayor impacto en la comunidad. En cualquier, ¡tu aportación será bienvenida!
                 </p>
-                <input type="checkbox" name="" id="">
+                <input type="checkbox" name="10_euros" id="10_euros">
                 <p>Quiero contribuir con 10€</p>
-                <input type="checkbox" name="" id="">
+                <input type="checkbox" name="15_euros" id="15_euros">
                 <p>Quiero contribuir con 15€</p>
-                <input type="checkbox" name="" id="">
+                <input type="checkbox" name="35_euros" id="35_euros">
                 <p>Quiero contribuir con 35€</p>
-                <input type="checkbox" name="" id="">
+                <input type="checkbox" name="otras_cantidades" id="otras_cantidades">
                 <p>Otras cantidades (escribir a continuación):</p>
-                <input type="number" name="" id="">
+                <input type="number" name="cantidad" id="cantidad">
             </form>
-            <form action="">
+            <form action="#">
                 <p>¿Tienes alguna duda, comentario o sugerencia? ¡Háznosla saber!</p>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <textarea name="mas_info" id="mas_info" cols="30" rows="10"></textarea>
                 <button>Aceptar</button>
             </form>
         </section>
